# thoracuda

./: .clang-format  .gitignore  CMakeLists.txt  tcdev
src/cpp/: cartesian_point_sources.cpp  cartesian_point_sources.hpp  dbscan.cpp  dbscan.hpp  gnomonic_point_sources.cpp  gnomonic_point_sources.hpp  kdtree.cpp  kdtree.hpp  pointsources.cpp  pointsources.hpp  projections.cpp  projections.hpp  stats.cpp  stats.hpp
src/cuda/: cuda_macros.h  exposure.h  gridify.cu  gridify.h  hotspot2d.cu  hotspot2d.h  pair.h  pairminmax.cu  pairminmax.h  range_brute.cu  range_brute.h  rangearray.cu  rangearray.h  rangearray_c.cu  rangearray_c.h
src/cuda/clustering/: dbscan.cu  dbscan.cuh  inputs.cuh
src/cuda/gridquery/: counts_grid.cu  counts_grid.cuh  gridquery.cu  gridquery.cuh  offsets_grid.cu  offsets_grid.cuh  quantized_data.cu  quantized_data.cuh  sorted_quantized_data.cu  sorted_quantized_data.cuh
src/cuda/rangequery/: counts_table.cu  counts_table.cuh  data_handle.cu  data_handle.cuh  neighbors_table.cu  neighbors_table.cuh  offsets_table.cu  offsets_table.cuh  row.cuh
tests/: CMakeLists.txt  test_cartesian_point_sources.cpp  test_dbscan.cpp  test_gridify.cu  test_gridquery.cu  test_hotspot2d.cu  test_kdtree.cpp  test_pairminmax.cu  test_pointsources.cpp  test_projections.cpp  test_range_brute.cu  test_rangearray.cpp  test_rangearray.cu  test_rangearray_c.cu  test_rangequery.cu  test_stats.cpp  testutils.hpp
tests/benchdata/: points.csv
